Colaboratory kullanılarak oluşturuldu

--- a/aes.ipynb
+++ b/aes.ipynb
@@ -6,7 +6,7 @@
       "name": "aes.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOtiHvy7xkoC0p+WhDtaipT",
+      "authorship_tag": "ABX9TyP5AEoSqIPKg2iD6MSRZTw1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,6 +32,42 @@
       },
       "source": [
         ""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "g7hFEw8bv3gH",
+        "outputId": "3f2c6105-d77a-4edc-e8c4-9a9930720587",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        }
+      },
+      "source": [
+        "\n",
+        "# key = os.urandom(16)\n",
+        "anahtar = 'Z0r.b!r*An@htar_'\n",
+        "sifrelenecek_veri = 'Murat 195172023'\n",
+        "print('Şifrelenmemiş Veri : ', sifrelenecek_veri)\n",
+        "\n",
+        "sifrelenmis_hali = encrypt(anahtar, sifrelenecek_veri)\n",
+        "print('Şifrelenmiş Veri : ', sifrelenmis_hali)\n",
+        "\n",
+        "geri_donusmus_hali = decrypt(anahtar, sifrelenmis_hali)\n",
+        "print('Geri Dönüştürülmüş Veri : ', geri_donusmus_hali)\n"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Şifrelenmemiş Veri :  Murat 195172023\n",
+            "Şifrelenmiş Veri :  b'b5\\x8dT\\xd3\\xcf~`0\\xf1\\xf9\\nz \\xd5=\\n\\xce.\\x94\\xee\\x02\\xda8t{!\\r^L$a\\xeeu\\xba\\x9dM\\x8b\\xd5Yg\\x97\\xdcb\\xe2\\xc52WgoS\\r\\xea\\xbdm.\\x07\\xc3\\xe1\\xe4\\x9a\\xe7\\xe6x'\n",
+            "Geri Dönüştürülmüş Veri :  b'Murat 195172023'\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
@@ -588,18 +624,7 @@
         "        write(decrypt(sys.argv[2], text))\n",
         "    else:\n",
         "        print('Expected command \"encrypt\" or \"decrypt\" in first argument.')\n",
-        "\n",
-        "\n",
-        "# key = os.urandom(16)\n",
-        "anahtar = 'Z0r.b!r*An@htar_'\n",
-        "sifrelenecek_veri = 'Murat 195172023'\n",
-        "print('Şifrelenmemiş Veri : ', sifrelenecek_veri)\n",
-        "\n",
-        "sifrelenmis_hali = encrypt(anahtar, sifrelenecek_veri)\n",
-        "print('Şifrelenmiş Veri : ', sifrelenmis_hali)\n",
-        "\n",
-        "geri_donusmus_hali = decrypt(anahtar, sifrelenmis_hali)\n",
-        "print('Geri Dönüştürülmüş Veri : ', geri_donusmus_hali)\n"
+        "\n"
       ],
       "execution_count": 23,
       "outputs": [
